[package]
name = "querent"
version = "0.0.1"
authors = ["Querent AI LLC <contact@querent.xyz>"]
edition = "2021"
license = "BSL-1.0"
description = "A library for building and running querent AI workflows."
repository = "https://github.com/querent-ai/quester"
homepage = "https://querent.xyz/"
documentation = "https://querent.xyz/docs/"