[package]
name = "querent"
version = "0.0.1"
authors = ["Querent AI LLC <contact@querent.xyz>"]
edition = "2021"
license = "BSL-1.1"
description = "A library for building and running querent AI workflows."
repository = "https://github.com/querent-ai/quester"
homepage = "https://querent.xyz/"
documentation = "https://querent.xyz/docs/"


[dependencies]
querent-synapse = { workspace = true }
actors = { workspace = true }
common = { workspace = true }
storage = { workspace = true }
cluster = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace =true }
serde = { workspace = true }
serde_json = { workspace = true }
pyo3-asyncio = { workspace = true }
pyo3 = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
actors = { workspace = true, features = ["testsuite"] }
common = { workspace = true, features = ["testsuite"] }

[features]
testsuite = []

[[test]]
name = "test_basic"
path = "pytests/test_basic.rs"
harness = false

[[test]]
name = "quester_flow_tests"
path = "pytests/quester_flow_tests.rs"
harness = false
