[package]
name = "storage"
version = "4.0.0"
authors = ["Querent AI LLC <contact@querent.xyz>"]
edition = "2021"
license = "BSL-1.1"
description = "Storage for Querent AI"
repository = "https://github.com/querent-ai/querent"
homepage = "https://querent.xyz/"
documentation = "https:/querent.xyz/docs/"

[dependencies]
common = { workspace = true }
proto = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
milvus-sdk-rust= { workspace = true }
neo4rs = { workspace = true }
tokio-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }
diesel-async = { workspace = true, features = [
  "postgres",
  "deadpool",
]}
diesel  = { workspace = true }
deadpool = { workspace = true }
rustls = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
pgvector = { workspace = true }
redb = { workspace = true }
rmp-serde = { workspace = true }
fastembed = { workspace = true }
surrealdb = { workspace = true }
bincode = { workspace = true }
csv = { workspace = true }