[package]
name = "rian"
version = "1.0.2"
authors = ["Querent AI LLC <contact@querent.xyz>"]
edition = "2021"
license = "BSL-1.1"
description = "R!AN: Realtime Information Aggregation Network"
repository = "https://github.com/querent-ai/querent"
homepage = "https://querent.xyz/"
documentation = "https:/querent.xyz/docs/"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
tauri = { version = "2.0.0-rc.0", features = [ "macos-private-api", "protocol-asset", "tray-icon"] }
tauri-utils = "2.0.0-rc.0"
tauri-plugin-single-instance = "2.0.0-rc.0"
tauri-plugin-autostart  = "2.0.0-rc.0"
tauri-plugin-notification = "2.0.0-rc.0"
tauri-plugin-http = "2.0.0-rc.0"
tauri-plugin-global-shortcut = "2.0.0-rc.0"
tauri-plugin-updater = "2.0.0-rc.0"
tauri-plugin-process = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-os = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-clipboard = "2.0.0-rc.0"
tauri-specta = { git ="https://github.com/oscartbeaumont/tauri-specta", branch = "main", features = ["derive", "javascript", "typescript"] }
specta = { version = "=2.0.0-rc.20" }
specta-typescript = "=0.0.7"
specta-jsdoc = "=0.0.7"
sysinfo = "0.31.2"
log = { version = "^0.4.17", features = [
  "std",
  "max_level_debug",
  "release_max_level_debug"
] }
once_cell = "1.19.0"
parking_lot = "0.12.3"
postgresql_embedded = { version = "0.16.3", features = ["blocking", "bundled"] }
postgresql_extensions = { version = "0.16.3", features = ["blocking"] }
diesel = "2.2.4"
diesel-async = { version = "0.5.0", features = ["bb8", "postgres", "async-connection-wrapper"] }
anyhow = "1"
deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
lazy_static = "1.5.0"

# Querent AI dependencies
node = { path = "../../../querent/node" }
common = { path = "../../../querent/common" }
proto = { path = "../../../querent/proto" }
insights = { path = "../../../querent/insights" }
tiny_http = "0.12.0"
serde_urlencoded = "0.7"
dotenv = "0.15"
storage = { path = "../../../querent/storage" }

[dev-dependencies]
vcpkg = "0.2.15"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
macos-accessibility-client = "0.0.1"

[target.'cfg(windows)'.dependencies]
windows = "0.58.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
openssl-support = []
license-check = []

[patch.crates-io]
bip39 = { git = "https://github.com/saraswatpuneet/rust-bip39", branch = "master" }
rust_decimal = { git = 'https://github.com/paupino/rust-decimal.git' }
esaxx-rs = { git = "https://github.com/Querent-ai/esaxx-rs" }
